--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "leaflet-glify-layer",
-	"version": "0.0.0",
+	"version": "0.0.1",
 	"description": "Add-on for the Leaflet.glify plugin to provide more leaflet-idiomatic bindings",
 	"main": "dist/leaflet-glify-layer.js",
 	"license": "SEE LICENSE IN LICENCE",
@@ -34,10 +34,10 @@
 		"babel-preset-es2015": "^6.24.0",
 		"gulp": "^4.0.2",
 		"gulp-babel": "^6.1.3",
-		"prettier": "^2.1.1",
 		"rollup": "^2.23.0",
 		"rollup-plugin-babel": "^4.4.0",
 		"rollup-plugin-commonjs": "^10.1.0",
 		"rollup-plugin-web-worker-loader": "^1.3.1"
-	}
+	},
+	"dependencies": {}
 }
